--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,69 @@
 body{
     font-family: 'Poppins', sans-serif; 
+    margin: 0;
 }
 h1{
-    font-size: 50px;
+    font-size: 55px;
     font-family:'Courier New',Courier,  monospace;
-    text-align: justify;
-   
+    text-align: left;  
  }
 h1:before {
     content: "";
     display: flex;
     width: 5px;
-    height: 90px; 
+    height: 95px; 
     background: #000;
-    left: 9%;
-    top: 16%;
+    left: 10%;
+    top: 14.5%;
     position:absolute;
+    
   }
+
+#first-container{
+    padding-top: 30px;
+    padding-left: 20px;
+}
   
-  
-h3{
+.first-para{
     font-weight: 400;
     padding-bottom: 20px;
 }
 h5{
-    padding-top: 30px;
+    padding-top: 20px;
+    font-weight: 300;
    
 
 }
-section{
+.flexible-container{
     display: flex;
+    margin-bottom:80px;
+}
+.banner{
+  display: flex;
+  margin-bottom: 80px; 
+  margin-left: 10px;
+  background-image: url(images/shapes/shape-1.png); 
+  background-repeat: no-repeat;
+  background-position-x: 5%;
+  background-position-y: 30%;
+  background-size: 15%;
+}
+.circle-banner{
+    display: flex;
+  margin-bottom: 100px; 
+  margin-left: 10px;
+  background-image: url(images/shapes/shape-1.png); 
+  background-repeat: no-repeat;
+  background-position-x: 97%;
+  background-position-y: 72%;
+  background-size: 13%;
+  padding-bottom: 10%;
+
 }
 span{
     color: rgb(69, 4, 99);
 }
 
-#first-container{
-    padding-top: 30px;
-}
-.my-color{
-    background: ;
-}
 .half-width{
     width: 50%;
     padding-left: 10%;
@@ -49,6 +72,7 @@ span{
 .half-width img{
     height: 80%;
     width:80%;
+    margin-top: 10%;
     
 }
 .link-button{
@@ -57,7 +81,41 @@ span{
     padding: 10px 30px;
     font-weight: 700;
     border-radius: 5px;
-    color: white;
+    color: white;    
+}
+.box-item{
     
-    
+    width: 50%;
+    height: 100%;
+   margin-left: 5%;
+   margin-right: 5%;
+   background-color: rgb(228, 7, 217);
+   border-radius: 20px;
+   padding: 40px;
+}
+.box-color{
+     background-color:  rgb(5, 94, 94); 
+      
+}
+.next-color{
+    background-color: rgb(219, 88, 0);
+}
+.box-item img{
+    height: 30%;
+    width:30%;
+}
+.para-size{
+    font-size: 12px;
+    font-weight: 300;
+  
+}
+#middle{
+    text-align: center;
+    font-size: 40px;
+}
+.last{
+    text-align: center;
+    background-color: black;
+    color: aliceblue;
+    font-family: cursive;
 }
